--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercise1_171</title>
 </head>
 <body>
-    <p>halo</p>
+    <header>
+        Wisata Masa Kini
+    </header>
+    <section id="intro">
+        <h2>Selamat Datang di Surga Wisata</h2>
+        <p>Kami disini Menyediakan berbagai trip wisata keliling Indonesia</p>
+</section>
+
+    <section id="service">
+        
+    </section>
+
+
+
 </body>
 </html>
