membuat section service

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise1_171</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
@@ -15,7 +16,9 @@
 </section>
 
     <section id="service">
-        
+        <h2>Pelayanan Kami</h2>
+        <p>"Pintu Gerbang ke Petualangan" - Sambutlah petualangan dengan lengan terbuka melalui situs web kami yang menghadirkan destinasi wisata paling menarik dari berbagai belahan dunia. Temukan tempat-tempat eksotis, aktivitas seru, dan akomodasi yang nyaman untuk perjalanan Anda.
+        </p>
     </section>
 
 
