--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
     <section id="intro">
         <h2>Selamat Datang di Surga Wisata</h2>
         <p>Kami disini Menyediakan berbagai trip wisata keliling Indonesia</p>
-        <img src="img/ucp1.jpg"
-</section>
+        <img src="img/ucp1.jpg">
+    </section>
 
     <section id="service">
-        <h2>Pelayanan Kami</h2>
+        
         <p>"Pintu Gerbang ke Petualangan" - Sambutlah petualangan dengan lengan terbuka melalui situs web kami yang menghadirkan destinasi wisata paling menarik dari berbagai belahan dunia. Temukan tempat-tempat eksotis, aktivitas seru, dan akomodasi yang nyaman untuk perjalanan Anda.
         </p>
+        
+        <b>Kami Menyediakan : </b>
+
+    <ul>
+        <li>Informasi Destinasi Wisata</li>
+        <li>Paket Perjalanan</li>
+        <li>Pemesanan Tiket</li>
+        <li>Pemandu Wisata</li>
+        <li>Ulasan dan Rekomendasi</li>
+    </ul>
 
 
 
