--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
         <li>Pemandu Wisata</li>
         <li>Ulasan dan Rekomendasi</li>
     </ul>
+    <ul>
+        <li>Penyewaan alat musik</li>
+            <div class="table-container">
+            <table style="margin-left: auto;margin-right: auto;" border="padding" cellpading="10" class="table-left">
+                <tr style="background-color: white;">
+                    <td><p id="jdi">Foto Wisata</td>
+                    <td><p id="jdi">Deskripsi</td>
+                </tr>
+                <tr>
+                    <td><img src="img/labuanBajo.jpeg" style="width: 500px;height: 500px;"></td>
+                    <td><p id="alat">Harga : </p><p id="mharga">Rp. 2.125.000</p><br>
+                        <p id="alat">Daerah : </p><p id="mdaerah"></p><br>
+                        <p id="alat">Fasilitas : </p><p id="mfasilitas"><li>
+                            3 Hari 2 Malam
+                        </li></p><br>
+                        <p id="alat">Harga Sewa/Hari : </p><p id="mharga">Rp. 500.000</p><br>
+                    </td>
+                </tr>
+                
+    </ul>
 
 
 
