--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 
 
     </section>
+    <button onclick="klikButton()">Coba klik!</button>
+    <p id="tanggal"></p>
+
+    <script src="js.js"></script>
 
 
 
