--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <tr>
                     <td><img src="img/labuanBajo.jpeg" style="width: 500px;height: 500px;"></td>
                     <td><p id="alat">Harga : </p><p id="mharga">Rp. 2.125.000</p><br>
-                        <p id="alat">Daerah : </p><p id="mdaerah"></p><br>
+                        <p id="alat">Daerah : </p><p id="mdaerah">Labuan Bajo</p><br>
                         <p id="alat">Fasilitas : </p><p id="mfasilitas"><li>
                             3 Hari 2 Malam
                         </li></p><br>
