commit table kanan

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
                 <tr style="background-color: white;">
                     <td><p id="jdi">Foto Wisata</td>
                     <td><p id="jdi">Deskripsi</td>
-                        <td><p id="jdi">Penjelasan</td>
+                    <td><p id="jdi">Penjelasan</td>
                 </tr>
                 <tr>
                     <td><img src="img/labuanBajo.jpeg" style="width: 500px;height: 250px;"></td>
                     <td><p>Labuan Bajo merupakan sebuah surga tersembunyi yang ada di Indonesia bagian timur. 
-                        Desa ini terletak di Kecamatan Komodo, Kabupaten Manggarai Barat, Provinsi Nusa Tenggara Timur yang berbatasan langsung dengan Nusa Tenggara Barat dan dipisahkan oleh Selat Sape. Labuan Bajo adalah salah satu dari lima Destinasi Super Prioritas yang sedang dikembangkan di Indonesia. </p></td>
+                        Desa ini terletak di Kecamatan Komodo, Kabupaten Manggarai Barat, Provinsi Nusa Tenggara Timur yang berbatasan langsung dengan Nusa Tenggara Barat dan dipisahkan oleh Selat Sape. 
+                        Labuan Bajo adalah salah satu dari lima Destinasi Super Prioritas yang sedang dikembangkan di Indonesia. </p></td>
                     <td><p id="alat">Nama : </p><p id="mharga">Labuan Bajo</p><br>
                         <p id="alat">Paket Perjalanan : </p><p id="mharga">Rp. 2.125.000</p><br>
                         <p id="alat">Daerah : </p><p id="mdaerah">Nusa Tenggara Timur</p><br>
@@ -56,6 +57,10 @@
                 </tr>
                 <tr>
                     <td><img src="img/dieng.png" style="width: 500px;height: 250px;"></td>
+                    <td><p>Dataran tinggi Dieng atau Plato Dieng adalah sebuah wilayah di pusat Jawa Tengah yang memiliki ciri geologi, sejarah, dan pertanian yang dinilai khas.[oleh siapa?] 
+                        Dataran ini diapit oleh jajaran perbukitan di sisi utara dan selatannya, yang berasal dari aktivitas vulkanik yang sama dan disebut Pegunungan Dieng. 
+                        Pegunungan Dieng sendiri secara geografis berada di antara kompleks Puncak Rogojembangan di sebelah barat dan pasangan Gunung Sindoro dan Gunung Sumbing di sisi timurnya. 
+                        Secara kasar dapat dikatakan bahwa wilayah Dataran tinggi Dieng menempati kawasan berukuran lebar (utara–selatan) 4–6 km dan panjang (barat–timur) 11 km.[1] </p></td>
                     <td><p id="alat">Nama : </p><p id="mharga">Dataran Tinggi Dieng</p><br>
                         <p id="alat">Paket Perjalanan : </p><p id="mharga">Rp. 780.000</p><br>
                         <p id="alat">Daerah : </p><p id="mdaerah">Nusa Tenggara Timur</p><br>
@@ -67,6 +72,13 @@
                         </p></ul><br>        
                     </td>
                 </tr>
+
+                <table style="margin-left: auto;margin-right: auto" border ="padding" cellpading="10" class="table-right">
+                    <tr style="background-color: white;">
+                        <td><p id="jdi">Foto Wisata</td>
+                        <td><p id ="jdi">Deskripsi</td>
+                        <td><p id ="jdi">Penjelasan</td>
+                        </tr>
 
                 
     </ul>
