--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
                         <td><p id ="jdi">Deskripsi</td>
                         <td><p id ="jdi">Penjelasan</td>
                         </tr>
+                        <tr>
+                            <td><img src="img/bromo.png" style="width: 500px;height: 250px;"></td>
+                            <td><p> Gunung Bromo merupakan salah satu gunung dari lima gunung yang terdapat di komplek Pegunungan Tengger di laut pasir. 
+                                Daya tarik gunung ini adalah merupakan gunung yang masih aktif dan dapat dengan mudah didaki/dikunjungi. 
+                                Obyek wisata Gunung Bromo ini merupakan fenomena dan atraksi alami yang merupakan salah satu daya tarik pengunjung. 
+                                Kekhasan gejala alam yang tidak ditemukan di tempat lain adalah adanya kawah di tengah kawah (creater in the creater) dengan hamparan laut pasir yang mengelilinginya. </p></td>
+                            <td><p id="alat">Nama : </p><p id="mharga">Gunung Bromo Midnight Sunrise</p><br>
+                                <p id="alat">Paket Perjalanan : </p><p id="mharga">Rp. 350.000</p><br>
+                                <p id="alat">Daerah : </p><p id="mdaerah">Jawa Timur</p><br>
+                                <p id="alat">Fasilitas : </p><p id="mfasilitas">
+                                    <ul>
+                                    <li>1 Hari</li>
+                                    <li>Open Trip</li>
+                                    <li>Min. 2 Orang</li> 
+                                </p></ul><br>        
+                            </td>
+                        </tr>
 
                 
     </ul>
