--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
                         </tr>
                                 <tr>
                                     <td><img src="img/pahawang.png" style="width: 500px;height: 250px;"></td>
-                                    <td><p> Gunung Bromo merupakan salah satu gunung dari lima gunung yang terdapat di komplek Pegunungan Tengger di laut pasir. 
-                                        Daya tarik gunung ini adalah merupakan gunung yang masih aktif dan dapat dengan mudah didaki/dikunjungi. 
-                                        Obyek wisata Gunung Bromo ini merupakan fenomena dan atraksi alami yang merupakan salah satu daya tarik pengunjung. 
-                                        Kekhasan gejala alam yang tidak ditemukan di tempat lain adalah adanya kawah di tengah kawah (creater in the creater) dengan hamparan laut pasir yang mengelilinginya. </p></td>
+                                    <td><p> Pulau Pahawang menyuguhkan laut biru dan pasir putih yang luar biasa indah. Sepanjang mata memandang pantai terbentang di bagian di bagian utara, timur dan selatan. Sementara sisanya diisi oleh rimbunan hutan mangrove.
+                                </p></td>
                                     <td><p id="alat">Nama : </p><p id="mharga">Gunung Bromo Midnight Sunrise</p><br>
                                         <p id="alat">Paket Perjalanan : </p><p id="mharga">Rp. 350.000</p><br>
                                         <p id="alat">Daerah : </p><p id="mdaerah">Jawa Timur</p><br>
