--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <ul>
                             <li>3 Hari 2 Malam</li>
                             <li>Open Trip</li>
-                            <li>3 Hari 2 Malam</li> 
+                            <li>Min. 2 Orang</li> 
                         </p></ul><br>        
                     </td>
                 </tr>
@@ -115,8 +115,6 @@
     </section>
     <p id="tanggal"></p>
     <button onclick="klikButton()">Coba klik!</button>
-    
-
     <script src="js.js"></script>
 
 
