--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <li>Ulasan dan Rekomendasi</li>
     </ul>
     <ul>
-        <li>Penyewaan alat musik</li>
             <div class="table-container">
             <table style="margin-left: auto;margin-right: auto;" border="padding" cellpading="10" class="table-left">
                 <tr style="background-color: white;">
@@ -116,6 +115,10 @@
     <p id="tanggal"></p>
     <button onclick="klikButton()">Coba klik!</button>
     <script src="js.js"></script>
+
+    <footer>
+        <p>Hak Cipta &copy; Arv Wisata Center</p>
+    </footer>
 
 
 
